DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Feb-06-2011 patrick     An assertion has been added to
                        vrj::Kernel::init(const boost::program_options::variables_map&)
                        to help clarify that the use of
                        vrj::Kernel::getClusterOptions() is a precondition.
Jan-29-2011 patrick     vrj::Kernel::loadConfigFile() now ignores config files
                        given on cluster slave nodes.

[3.0.0 released - 11.27.2010]==================================================
Oct-10-2010 patrick     vrj::osg::AppViewer now sets flags on the camera held
                        by the context-specific osgViewer::Viewer object so
                        that the camera does not clear the color buffer or the
                        depth buffer itself.

[3.0.0 RC 1 released - 9.5.2010]===============================================

[3.0 beta 1 released - 6.19.2010]==============================================
Jun-19-2010 patrick     Added an "auto-return" feature to simulated analog
                        devices.
                        Submitted by Carsten Neumann.
                        NEW VERSION: 2.3.21
Jun-07-2010 patrick     Added vrj::osg::AppPager, a VR Juggler application
                        class that interacts with osgDB::DatabasePager.
                        Submitted by Lucie Lemonnier.
                        NEW VERSION: 2.3.20
Feb-25-2010 patrick     Added vrj::osg::AppViewer, a VR Juggler application
                        class that interacts with osgViewer.
                        Submitted by Christian Noon.
                        NEW VERSION: 2.3.19
Apr-19-2009 patrick     Updated for Gadgeteer 1.3.22.
                        NEW VERSION: 2.3.18
Mar-31-2009 patrick     Added support for creating OpenGL 3.0 contexts using
                        GLX and WGL. Submitted by Todd Furlong.